fix p spacing

--- a/styles_about.css
+++ b/styles_about.css
@@ -10,8 +10,10 @@ h1, h2, h3 {
   line-height: 1.3; }
 
 p {
-    font-size: 16px; 
-    margin: -16px 0px; }
+    font-size: 16px; }
+
+p:first-child {
+    margin: -16px 0px 0px 0px; }
 
 a {
   color: #222;
